Bug fix: the Hero-3 image 2 was behind the overlay because it lacked a z-index

--- a/components/hero-3/hero-3.scss
+++ b/components/hero-3/hero-3.scss
@@ -74,10 +74,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  // margin-top: 10em;
 }
 
 .cp-hero-3__right-col {
+  z-index: 1;
   margin-top: 5em;
   margin-left: 5em;
 
